tests/ui/badpaste.stderr
error: multiple nontrivial entries in ${paste ...}
  --> ui/badpaste.rs:13:18
   |
13 |         ${paste $ttype _ $ftype}
   |                  ^^^^^

error: multiple nontrivial entries in ${paste ...}
  --> ui/badpaste.rs:13:27
   |
13 |         ${paste $ttype _ $ftype}
   |                           ^^^^^
